src/main/java/com/example/Demo/errors/exception/users/ChangePasswordException.java
package com.example.Demo.errors.exception.users;

public class ChangePasswordException extends RuntimeException {
    public ChangePasswordException(String message) {
        super(message);
    }
}
